@@ -7,7 +7,6 @@ import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class InputReader {
     public static List<String> readInputByLine(String inputLocation, Class<?> callingClass) {
@@ -20,7 +19,22 @@ public class InputReader {
 
             Path path = Path.of(uri);
             return Files.lines(path)
-                    .collect(Collectors.toList());
+                    .toList();
+        } catch (IOException | URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    public static String readInputAsString(String inputLocation, Class<?> callingClass) {
+        URL resource = callingClass.getClassLoader().getResource(inputLocation);
+
+        URI uri = null;
+        try {
+            assert resource != null;
+            uri = resource.toURI();
+
+            Path path = Path.of(uri);
+            return Files.readString(path);
         } catch (IOException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
